Update multi_tries (n_samples) to allow a list of tries for different max depth

--- a/notebooks/01_debug copy 2.ipynb
+++ b/notebooks/01_debug copy 2.ipynb
@@ -62,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:27<00:00,  2.58it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:15<00:00,  4.60it/s]\n"
      ]
     },
     {
@@ -70,86 +70,69 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "  _     ._   __/__   _ _  _  _ _/_   Recorded: 13:05:11  Samples:  23795\n",
-      " /_//_/// /_\\ / //_// / //_'/ //     Duration: 27.153    CPU time: 26.922\n",
+      "  _     ._   __/__   _ _  _  _ _/_   Recorded: 17:23:46  Samples:  12058\n",
+      " /_//_/// /_\\ / //_// / //_'/ //     Duration: 15.219    CPU time: 15.125\n",
       "/   _/                      v5.0.1\n",
       "\n",
-      "Profile at C:\\Windows\\Temp\\ipykernel_9328\\4126380201.py:4\n",
+      "Profile at C:\\Windows\\Temp\\ipykernel_20288\\2858769384.py:4\n",
       "\n",
-      "27.152 <module>  C:\\Windows\\Temp\\ipykernel_9328\\4126380201.py:1\n",
-      "└─ 27.152 MultiBART.fit  bart_playground\\bart.py:27\n",
-      "   └─ 27.151 MultiSampler.run  bart_playground\\samplers.py:83\n",
-      "      └─ 27.076 MultiSampler.one_iter  bart_playground\\samplers.py:338\n",
-      "         ├─ 23.140 MultiChange.propose  bart_playground\\moves.py:33\n",
-      "         │  ├─ 9.677 MultiChange.try_propose  bart_playground\\moves.py:344\n",
-      "         │  │  ├─ 5.613 Tree.change_split  bart_playground\\params.py:391\n",
-      "         │  │  │  └─ 5.516 Tree.update_n  bart_playground\\params.py:405\n",
-      "         │  │  │     ├─ 2.549 [self]  bart_playground\\params.py\n",
-      "         │  │  │     ├─ 1.575 Tree.update_n  bart_playground\\params.py:405\n",
-      "         │  │  │     │  ├─ 0.752 [self]  bart_playground\\params.py\n",
-      "         │  │  │     │  ├─ 0.281 sum  numpy\\core\\fromnumeric.py:2177\n",
-      "         │  │  │     │  └─ 0.279 Tree.update_n  bart_playground\\params.py:405\n",
-      "         │  │  │     └─ 1.145 sum  numpy\\core\\fromnumeric.py:2177\n",
-      "         │  │  │           [2 frames hidden]  numpy, <built-in>\n",
-      "         │  │  ├─ 1.348 BARTLikelihood.trees_log_marginal_lkhd  bart_playground\\priors.py:279\n",
-      "         │  │  │  ├─ 0.690 _trees_log_marginal_lkhd_numba  bart_playground\\priors.py:27\n",
-      "         │  │  │  └─ 0.327 Parameters.leaf_basis  bart_playground\\params.py:675\n",
-      "         │  │  │     └─ 0.277 Tree.leaf_basis  bart_playground\\params.py:481\n",
-      "         │  │  ├─ 0.755 [self]  bart_playground\\moves.py\n",
-      "         │  │  ├─ 0.738 Parameters.copy  bart_playground\\params.py:598\n",
-      "         │  │  │  └─ 0.575 Tree.copy  bart_playground\\params.py:157\n",
-      "         │  │  │     └─ 0.542 Tree.from_existing  bart_playground\\params.py:130\n",
-      "         │  │  │        └─ 0.335 _copy_all_tree_arrays  bart_playground\\params.py:43\n",
-      "         │  │  └─ 0.599 Tree.copy  bart_playground\\params.py:157\n",
-      "         │  │     └─ 0.575 Tree.from_existing  bart_playground\\params.py:130\n",
-      "         │  │        └─ 0.356 _copy_all_tree_arrays  bart_playground\\params.py:43\n",
-      "         │  ├─ 7.838 MultiGrow.try_propose  bart_playground\\moves.py:165\n",
-      "         │  │  ├─ 4.370 BARTLikelihood.trees_log_marginal_lkhd  bart_playground\\priors.py:279\n",
-      "         │  │  │  ├─ 2.998 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
-      "         │  │  │  │     [161 frames hidden]  numba\n",
-      "         │  │  │  ├─ 0.923 Parameters.leaf_basis  bart_playground\\params.py:675\n",
-      "         │  │  │  │  └─ 0.912 Tree.leaf_basis  bart_playground\\params.py:481\n",
-      "         │  │  │  │     └─ 0.807 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
-      "         │  │  │  │           [13 frames hidden]  numba\n",
-      "         │  │  │  └─ 0.329 _trees_log_marginal_lkhd_numba  bart_playground\\priors.py:27\n",
-      "         │  │  ├─ 1.273 Tree.split_leaf  bart_playground\\params.py:269\n",
-      "         │  │  │  ├─ 0.665 Tree._resize_arrays  bart_playground\\params.py:206\n",
-      "         │  │  │  │  ├─ 0.360 full  numpy\\core\\numeric.py:274\n",
-      "         │  │  │  │  └─ 0.290 [self]  bart_playground\\params.py\n",
-      "         │  │  │  └─ 0.308 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
-      "         │  │  │        [12 frames hidden]  numba\n",
-      "         │  │  ├─ 0.613 TreesPrior.trees_log_prior  bart_playground\\priors.py:132\n",
-      "         │  │  │  └─ 0.548 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
-      "         │  │  │        [12 frames hidden]  numba\n",
-      "         │  │  ├─ 0.435 [self]  bart_playground\\moves.py\n",
-      "         │  │  ├─ 0.291 Parameters.copy  bart_playground\\params.py:598\n",
-      "         │  │  └─ 0.273 Tree.copy  bart_playground\\params.py:157\n",
-      "         │  ├─ 3.341 MultiPrune.try_propose  bart_playground\\moves.py:255\n",
-      "         │  │  ├─ 1.113 Tree.split_leaf  bart_playground\\params.py:269\n",
-      "         │  │  │  ├─ 0.571 Tree._resize_arrays  bart_playground\\params.py:206\n",
-      "         │  │  │  │  └─ 0.308 full  numpy\\core\\numeric.py:274\n",
-      "         │  │  │  └─ 0.326 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
-      "         │  │  │        [12 frames hidden]  numba\n",
-      "         │  │  ├─ 0.644 Tree.copy  bart_playground\\params.py:157\n",
-      "         │  │  │  └─ 0.638 Tree.from_existing  bart_playground\\params.py:130\n",
-      "         │  │  │     └─ 0.455 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
+      "15.217 <module>  C:\\Windows\\Temp\\ipykernel_20288\\2858769384.py:1\n",
+      "└─ 15.217 MultiBART.fit  bart_playground\\bart.py:27\n",
+      "   └─ 15.216 MultiSampler.run  bart_playground\\samplers.py:83\n",
+      "      └─ 15.169 MultiSampler.one_iter  bart_playground\\samplers.py:338\n",
+      "         ├─ 11.477 MultiGrow.propose  bart_playground\\moves.py:33\n",
+      "         │  ├─ 5.622 MultiGrow.try_propose  bart_playground\\moves.py:180\n",
+      "         │  │  ├─ 3.894 BARTLikelihood.trees_log_marginal_lkhd  bart_playground\\priors.py:279\n",
+      "         │  │  │  ├─ 2.984 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
+      "         │  │  │  │     [196 frames hidden]  numba, llvmlite\n",
+      "         │  │  │  └─ 0.815 Parameters.leaf_basis  bart_playground\\params.py:675\n",
+      "         │  │  │     └─ 0.814 Tree.leaf_basis  bart_playground\\params.py:481\n",
+      "         │  │  │        └─ 0.793 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
+      "         │  │  │              [25 frames hidden]  numba\n",
+      "         │  │  ├─ 0.583 TreesPrior.trees_log_prior  bart_playground\\priors.py:132\n",
+      "         │  │  │  └─ 0.558 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
+      "         │  │  │        [41 frames hidden]  numba\n",
+      "         │  │  └─ 0.435 Tree.split_leaf  bart_playground\\params.py:269\n",
+      "         │  │     └─ 0.285 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
+      "         │  │           [13 frames hidden]  numba\n",
+      "         │  ├─ 2.098 MultiPrune.try_propose  bart_playground\\moves.py:288\n",
+      "         │  │  ├─ 0.614 Tree.split_leaf  bart_playground\\params.py:269\n",
+      "         │  │  │  ├─ 0.329 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
+      "         │  │  │  │     [13 frames hidden]  numba\n",
+      "         │  │  │  └─ 0.195 Tree._resize_arrays  bart_playground\\params.py:206\n",
+      "         │  │  ├─ 0.514 Tree.copy  bart_playground\\params.py:157\n",
+      "         │  │  │  └─ 0.512 Tree.from_existing  bart_playground\\params.py:130\n",
+      "         │  │  │     └─ 0.446 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
       "         │  │  │           [13 frames hidden]  numba\n",
-      "         │  │  ├─ 0.475 BARTLikelihood.trees_log_marginal_lkhd  bart_playground\\priors.py:279\n",
-      "         │  │  └─ 0.337 [self]  bart_playground\\moves.py\n",
-      "         │  └─ 1.875 MultiSwap.try_propose  bart_playground\\moves.py:434\n",
-      "         │     └─ 1.499 Tree.swap_split  bart_playground\\params.py:398\n",
-      "         │        └─ 1.468 Tree.change_split  bart_playground\\params.py:391\n",
-      "         │           └─ 1.447 Tree.update_n  bart_playground\\params.py:405\n",
-      "         │              ├─ 0.849 Tree.update_n  bart_playground\\params.py:405\n",
-      "         │              └─ 0.391 [self]  bart_playground\\params.py\n",
-      "         ├─ 2.782 TreesPrior.resample_leaf_vals  bart_playground\\priors.py:100\n",
-      "         │  └─ 2.651 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
-      "         │        [152 frames hidden]  numba\n",
-      "         └─ 0.719 Parameters.copy  bart_playground\\params.py:598\n",
-      "            └─ 0.716 Tree.copy  bart_playground\\params.py:157\n",
-      "               └─ 0.714 Tree.from_existing  bart_playground\\params.py:130\n",
-      "                  └─ 0.636 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
-      "                        [13 frames hidden]  numba\n",
+      "         │  │  ├─ 0.223 BARTLikelihood.trees_log_marginal_lkhd  bart_playground\\priors.py:279\n",
+      "         │  │  └─ 0.188 [self]  bart_playground\\moves.py\n",
+      "         │  ├─ 2.005 MultiChange.try_propose  bart_playground\\moves.py:396\n",
+      "         │  │  ├─ 0.884 Tree.change_split  bart_playground\\params.py:391\n",
+      "         │  │  │  └─ 0.869 Tree.update_n  bart_playground\\params.py:405\n",
+      "         │  │  │     ├─ 0.428 [self]  bart_playground\\params.py\n",
+      "         │  │  │     ├─ 0.208 sum  numpy\\core\\fromnumeric.py:2177\n",
+      "         │  │  │     │  └─ 0.162 _wrapreduction  numpy\\core\\fromnumeric.py:71\n",
+      "         │  │  │     └─ 0.205 Tree.update_n  bart_playground\\params.py:405\n",
+      "         │  │  ├─ 0.252 BARTLikelihood.trees_log_marginal_lkhd  bart_playground\\priors.py:279\n",
+      "         │  │  └─ 0.179 [self]  bart_playground\\moves.py\n",
+      "         │  ├─ 1.339 MultiSwap.try_propose  bart_playground\\moves.py:504\n",
+      "         │  │  └─ 0.951 Tree.swap_split  bart_playground\\params.py:398\n",
+      "         │  │     └─ 0.945 Tree.change_split  bart_playground\\params.py:391\n",
+      "         │  │        └─ 0.931 Tree.update_n  bart_playground\\params.py:405\n",
+      "         │  │           ├─ 0.504 Tree.update_n  bart_playground\\params.py:405\n",
+      "         │  │           └─ 0.286 [self]  bart_playground\\params.py\n",
+      "         │  └─ 0.246 Parameters.copy  bart_playground\\params.py:598\n",
+      "         │     └─ 0.204 Tree.copy  bart_playground\\params.py:157\n",
+      "         │        └─ 0.199 Tree.from_existing  bart_playground\\params.py:130\n",
+      "         ├─ 2.726 TreesPrior.resample_leaf_vals  bart_playground\\priors.py:100\n",
+      "         │  └─ 2.622 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
+      "         │        [183 frames hidden]  numba, llvmlite\n",
+      "         ├─ 0.628 Parameters.copy  bart_playground\\params.py:598\n",
+      "         │  └─ 0.624 Tree.copy  bart_playground\\params.py:157\n",
+      "         │     └─ 0.622 Tree.from_existing  bart_playground\\params.py:130\n",
+      "         │        └─ 0.552 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
+      "         │              [13 frames hidden]  numba\n",
+      "         └─ 0.185 Parameters.update_leaf_vals  bart_playground\\params.py:689\n",
       "\n",
       "\n"
      ]
@@ -161,7 +144,7 @@
     "profiler = Profiler()\n",
     "profiler.start()\n",
     "\n",
-    "bart = MultiBART(ndpost=50, nskip=20, n_trees=100, proposal_probs=proposal_probs, multi_tries=10)\n",
+    "bart = MultiBART(ndpost=50, nskip=20, n_trees=100, proposal_probs=proposal_probs, multi_tries=[5])\n",
     "bart.fit(X_train, y_train)\n",
     "\n",
     "profiler.stop()\n",
@@ -177,11 +160,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-19 13:05:41,161:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:2025-06-22 17:24:03,686:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:2025-06-19 13:05:41,164:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-06-22 17:24:03,688:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
-      "Iterations: 100%|██████████| 60/60 [00:01<00:00, 33.11it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 37.02it/s]\n"
      ]
     }
    ],
@@ -196,7 +179,7 @@
     "btpred = np.mean(np.array(btpred_all), axis=0)\n",
     "\n",
     "default_proposal_probs = {\"grow\": 0.25, \"prune\": 0.25, \"change\": 0.4, \"swap\": 0.1}\n",
-    "bart_default = DefaultBART(ndpost=50, nskip=10, n_trees=100, proposal_probs=default_proposal_probs)\n",
+    "bart_default = DefaultBART(ndpost=50, nskip=20, n_trees=100, proposal_probs=default_proposal_probs)\n",
     "bart_default.fit(X_train, y_train)"
    ]
   },
@@ -208,11 +191,11 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.022654767539919945,\n",
+       "{'bart': 0.022827207965755998,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.022409798535525886,\n",
-       " 'bart_default': 0.022324879581491108}"
+       " 'bart_default': 0.02292141162635982}"
       ]
      },
      "execution_count": 6,
