--- a/notebooks/real1_Abalone copy.ipynb
+++ b/notebooks/real1_Abalone copy.ipynb
@@ -51,52 +51,37 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             name     role         type demographic  \\\n",
-      "0             Sex  Feature  Categorical        None   \n",
-      "1          Length  Feature   Continuous        None   \n",
-      "2        Diameter  Feature   Continuous        None   \n",
-      "3          Height  Feature   Continuous        None   \n",
-      "4    Whole_weight  Feature   Continuous        None   \n",
-      "5  Shucked_weight  Feature   Continuous        None   \n",
-      "6  Viscera_weight  Feature   Continuous        None   \n",
-      "7    Shell_weight  Feature   Continuous        None   \n",
-      "8           Rings   Target      Integer        None   \n",
-      "\n",
-      "                   description  units missing_values  \n",
-      "0         M, F, and I (infant)   None             no  \n",
-      "1    Longest shell measurement     mm             no  \n",
-      "2      perpendicular to length     mm             no  \n",
-      "3           with meat in shell     mm             no  \n",
-      "4                whole abalone  grams             no  \n",
-      "5               weight of meat  grams             no  \n",
-      "6  gut weight (after bleeding)  grams             no  \n",
-      "7            after being dried  grams             no  \n",
-      "8  +1.5 gives the age in years   None             no  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from ucimlrepo import fetch_ucirepo \n",
+    "# from ucimlrepo import fetch_ucirepo \n",
     "  \n",
-    "# fetch dataset \n",
-    "abalone = fetch_ucirepo(id=1) \n",
+    "# # fetch dataset \n",
+    "# abalone = fetch_ucirepo(id=1) \n",
     "  \n",
-    "# data (as pandas dataframes) \n",
-    "X = abalone.data.features \n",
-    "y = abalone.data.targets \n",
+    "# # data (as pandas dataframes) \n",
+    "# X = abalone.data.features \n",
+    "# y = abalone.data.targets \n",
     "\n",
-    "# variable information \n",
-    "print(abalone.variables)"
+    "# # variable information \n",
+    "# print(abalone.variables)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('abalone.csv')\n",
+    "\n",
+    "y = df['Rings']\n",
+    "X = df.drop(columns=['Rings'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,10 +108,10 @@
        "      <th>Length</th>\n",
        "      <th>Diameter</th>\n",
        "      <th>Height</th>\n",
-       "      <th>Whole_weight</th>\n",
-       "      <th>Shucked_weight</th>\n",
-       "      <th>Viscera_weight</th>\n",
-       "      <th>Shell_weight</th>\n",
+       "      <th>Whole weight</th>\n",
+       "      <th>Shucked weight</th>\n",
+       "      <th>Viscera weight</th>\n",
+       "      <th>Shell weight</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -246,7 +231,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      Length  Diameter  Height  Whole_weight  Shucked_weight  Viscera_weight  \\\n",
+       "      Length  Diameter  Height  Whole weight  Shucked weight  Viscera weight  \\\n",
        "0      0.455     0.365   0.095        0.5140          0.2245          0.1010   \n",
        "1      0.350     0.265   0.090        0.2255          0.0995          0.0485   \n",
        "2      0.530     0.420   0.135        0.6770          0.2565          0.1415   \n",
@@ -259,7 +244,7 @@
        "4175   0.625     0.485   0.150        1.0945          0.5310          0.2610   \n",
        "4176   0.710     0.555   0.195        1.9485          0.9455          0.3765   \n",
        "\n",
-       "      Shell_weight  \n",
+       "      Shell weight  \n",
        "0           0.1500  \n",
        "1           0.0700  \n",
        "2           0.2100  \n",
@@ -275,7 +260,7 @@
        "[4177 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,17 +293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [02:39<00:00,  1.25it/s]\n",
-      "Iterations: 100%|██████████| 200/200 [02:19<00:00,  1.43it/s]\n",
-      "Iterations: 100%|██████████| 200/200 [02:28<00:00,  1.35it/s]\n",
-      "Iterations: 100%|██████████| 200/200 [02:28<00:00,  1.34it/s]\n"
+      "Iterations: 100%|██████████| 150/150 [00:51<00:00,  2.91it/s]\n",
+      "Iterations: 100%|██████████| 150/150 [00:44<00:00,  3.39it/s]\n",
+      "Iterations: 100%|██████████| 150/150 [00:44<00:00,  3.41it/s]\n",
+      "Iterations: 100%|██████████| 150/150 [00:44<00:00,  3.40it/s]\n"
      ]
     },
     {
@@ -330,7 +315,7 @@
       "Coordinates:\n",
       "  * eps_sigma2_dim_0  (eps_sigma2_dim_0) int32 4B 0\n",
       "Data variables:\n",
-      "    eps_sigma2        (eps_sigma2_dim_0) float64 8B 1.036\n"
+      "    eps_sigma2        (eps_sigma2_dim_0) float64 8B 1.149\n"
      ]
     }
    ],
@@ -339,7 +324,7 @@
     "chains = []\n",
     "proposal_probs = {\"multi_grow\": 0.25, \"multi_prune\": 0.25, \"multi_change\": 0.4, \"multi_swap\": 0.1}\n",
     "for i in range(n_chains):\n",
-    "    bart = MultiBART(ndpost=100, nskip=100, n_trees=100, proposal_probs=proposal_probs, multi_tries=10, random_state=i)\n",
+    "    bart = MultiBART(ndpost=100, nskip=50, n_trees=100, proposal_probs=proposal_probs, multi_tries=[10,5], random_state=i)\n",
     "    bart.fit(X_train, y_train)\n",
     "    sigmas = [trace.global_params['eps_sigma2'] for trace in bart.sampler.trace]\n",
     "    chains.append(sigmas)\n",
@@ -353,16 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-19 12:36:08,535:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:2025-06-22 20:51:27,050:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:2025-06-19 12:36:08,538:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-06-22 20:51:27,052:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -388,19 +373,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 4.890446134581324,\n",
+       "{'bart': 4.825826230576714,\n",
        " 'rf': 4.9138825837320566,\n",
        " 'lr': 4.816317561210926,\n",
        " 'btz': 4.777507400176949}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,17 +406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 120/120 [01:31<00:00,  1.31it/s]\n",
-      "Iterations: 100%|██████████| 120/120 [01:31<00:00,  1.31it/s]\n",
-      "Iterations: 100%|██████████| 120/120 [01:30<00:00,  1.33it/s]\n",
-      "Iterations: 100%|██████████| 120/120 [01:28<00:00,  1.35it/s]"
+      "Iterations: 100%|██████████| 200/200 [02:18<00:00,  1.45it/s]\n",
+      "Iterations: 100%|██████████| 200/200 [02:16<00:00,  1.46it/s]\n",
+      "Iterations: 100%|██████████| 200/200 [02:15<00:00,  1.48it/s]\n",
+      "Iterations: 100%|██████████| 200/200 [02:16<00:00,  1.46it/s]"
      ]
     },
     {
@@ -443,7 +428,7 @@
       "Coordinates:\n",
       "  * eps_sigma2_dim_0  (eps_sigma2_dim_0) int32 4B 0\n",
       "Data variables:\n",
-      "    eps_sigma2        (eps_sigma2_dim_0) float64 8B 1.12\n"
+      "    eps_sigma2        (eps_sigma2_dim_0) float64 8B 1.036\n"
      ]
     },
     {
@@ -459,7 +444,7 @@
     "chains = []\n",
     "proposal_probs = {\"multi_grow\": 0.25, \"multi_prune\": 0.25, \"multi_change\": 0.4, \"multi_swap\": 0.1}\n",
     "for i in range(n_chains):\n",
-    "    bart = MultiBART(ndpost=100, nskip=20, n_trees=100, proposal_probs=proposal_probs, multi_tries=10, random_state=i)\n",
+    "    bart = MultiBART(ndpost=100, nskip=100, n_trees=100, proposal_probs=proposal_probs, multi_tries=10, random_state=i)\n",
     "    bart.fit(X_train, y_train)\n",
     "    sigmas = [trace.global_params['eps_sigma2'] for trace in bart.sampler.trace]\n",
     "    chains.append(sigmas)\n",
@@ -473,20 +458,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bart': 4.881243699389864,\n",
+       "{'bart': 4.890446134581324,\n",
        " 'rf': 4.9138825837320566,\n",
        " 'lr': 4.816317561210926,\n",
        " 'btz': 4.777507400176949}"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -512,17 +498,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 200/200 [00:20<00:00,  9.77it/s]\n",
-      "Iterations: 100%|██████████| 200/200 [00:18<00:00, 10.68it/s]\n",
-      "Iterations: 100%|██████████| 200/200 [00:17<00:00, 11.46it/s]\n",
-      "Iterations: 100%|██████████| 200/200 [00:16<00:00, 12.19it/s]"
+      "Iterations: 100%|██████████| 200/200 [00:18<00:00, 10.53it/s]\n",
+      "Iterations: 100%|██████████| 200/200 [00:17<00:00, 11.56it/s]\n",
+      "Iterations: 100%|██████████| 200/200 [00:15<00:00, 12.65it/s]\n",
+      "Iterations: 100%|██████████| 200/200 [00:15<00:00, 13.21it/s]"
      ]
     },
     {
@@ -564,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +562,7 @@
        " 'btz': 4.777507400176949}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
