--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -37,8 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.59965549  0.66000473  0.60195109  0.59759841 -0.48024437 -0.05465378\n",
-      " -0.09076175 -0.06775115  0.44628062  0.51643207 -0.17564767 -0.18611937]\n"
+      "[63.69758676 65.48891713 70.34915697 54.40002918 59.24234782 64.16862716\n",
+      " 69.78577881 68.85612404 53.55980009 60.15631858 61.31876181 66.06233364]\n"
      ]
     }
    ],
@@ -47,8 +47,8 @@
     "                  \"prune\" : 0.4,\n",
     "                  \"change\" : 0.1,\n",
     "                  \"swap\" : 0.1}\n",
-    "generator = DataGenerator(n_samples=1000, n_features=2, noise=0.1, random_seed=42)\n",
-    "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
+    "generator = DataGenerator(n_samples=3000, n_features=40, noise=0.1, random_seed=42)\n",
+    "X, y = generator.generate(scenario=\"linear\")\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "np.set_printoptions(suppress=True)\n",
     "print(y_train[:12])"
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:09<00:00, 33.00it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:18<00:00, 16.05it/s]\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:09<00:00, 53.27it/s]\n"
+      "Iterations: 100%|██████████| 1100/1100 [00:19<00:00, 57.51it/s]\n"
      ]
     },
     {
@@ -95,7 +95,7 @@
     }
    ],
    "source": [
-    "bart2 = DefaultBART(ndpost=400, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
+    "bart2 = DefaultBART(ndpost=1000, nskip=100, n_trees=50, proposal_probs=proposal_probs)\n",
     "%prun -s cumtime -D profile_bart.prof -q bart2.fit(X_train, y_train)\n",
     "!gprof2dot -f pstats profile_bart.prof -o profile_bart.dot\n",
     "!dot -Tpng profile_bart.dot -o profile_bart.png"
@@ -110,10 +110,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 4 3 2 2 1 1 2 1 1 3 2 1 1 5 5 2 1 2 0 1 1 2 1 2 2 2 1 2 1 2 1 0 1 0\n",
-      " 1 1 1 1 1 1 1 1 2 2 1 2 1 2 1 2 2 2 1 2 1 1 2 1 1 1 1 1 1 1 2 1 1 2 2 4 2\n",
-      " 1 1 3 1 1 1 1 2 5 1 1 1 2 2 1 2 2 1 1 1 1 2 1 1 0 1]\n",
-      "(array([ 3,  4, 12, 16, 17, 72, 76, 82]),)\n"
+      "[2 4 2 2 3 3 3 3 2 4 3 4 3 3 4 1 1 2 2 1 4 2 2 2 2 5 3 2 4 2 2 2 3 5 3 1 4\n",
+      " 2 2 3 2 1 2 1 2 4 3 2 2 1 5 4 2 2 1 3 3 2 1 4 2 1 2 2 2 3 2 4 3 1 2 2 3 1\n",
+      " 1 1 2 2 1 2 2 2 2 3 2 2 2 1 2 2 2 2 3 2 2 3 2 1 4 2]\n",
+      "(array([ 1,  4,  5,  6,  7,  9, 10, 11, 12, 13, 14, 20, 25, 26, 28, 32, 33,\n",
+      "       34, 36, 39, 45, 46, 50, 51, 55, 56, 59, 65, 67, 68, 72, 83, 92, 95,\n",
+      "       98]),)\n"
      ]
     }
    ],
@@ -134,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00661782])}\n"
+      "{'eps_sigma2': array([0.00081172])}\n"
      ]
     }
    ],
@@ -151,14 +153,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.650110245 (split, n = 750)\n",
-      "\tVal: 0.004659622 (leaf, n = 480)\n",
-      "\tX_1 <= 0.315988928 (split, n = 270)\n",
-      "\t\tVal: -0.005203606 (leaf, n = 74)\n",
-      "\t\tVal: -0.028871579 (leaf, n = 196)\n",
-      "[ 0 -1  1 -2 -2 -1 -1 -2]\n",
-      "[        nan  0.00465962         nan         nan         nan -0.00520361\n",
-      " -0.02887158         nan]\n"
+      "X_19 <= 0.842776597 (split, n = 2250)\n",
+      "\tX_25 <= 0.639114857 (split, n = 1912)\n",
+      "\t\tVal: -0.012581126 (leaf, n = 1239)\n",
+      "\t\tVal: -0.000585763 (leaf, n = 673)\n",
+      "\tVal: 0.007525850 (leaf, n = 338)\n",
+      "[19 25 -1 -1 -1 -2 -2 -2]\n",
+      "[        nan         nan  0.00752585 -0.01258113 -0.00058576         nan\n",
+      "         nan         nan]\n"
      ]
     }
    ],
@@ -180,7 +182,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-23 12:00:55,884:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-06-23 17:59:16,168:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -188,9 +190,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.57 P_prune=0.43 A_grow=0.28 A_prune=0.40 (burnin)\n",
-      "Iteration 200/300 P_grow=0.54 P_prune=0.46 A_grow=0.30 A_prune=0.24\n",
-      "Iteration 300/300 P_grow=0.52 P_prune=0.48 A_grow=0.25 A_prune=0.31\n"
+      "Iteration 100/300 P_grow=0.53 P_prune=0.47 A_grow=0.13 A_prune=0.15 (burnin)\n",
+      "Iteration 200/300 P_grow=0.50 P_prune=0.50 A_grow=0.10 A_prune=0.06\n",
+      "Iteration 300/300 P_grow=0.50 P_prune=0.50 A_grow=0.10 A_prune=0.12\n"
      ]
     }
    ],
@@ -213,10 +215,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.01699852984056321,\n",
-       " 'rf': 0.01570244066836391,\n",
-       " 'lr': 0.04058944845865094,\n",
-       " 'btz': 0.01451765109911874}"
+       "{'bart': 2.017674140026814,\n",
+       " 'rf': 17.62572932546826,\n",
+       " 'lr': 0.010385157940898898,\n",
+       " 'btz': 2.043393861149057}"
       ]
      },
      "execution_count": 10,
@@ -247,10 +249,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.24605564  0.27110088  0.28510376  0.26839188 -0.33688342  0.09359006\n",
-      "  0.0220605   0.02451161  0.23247432  0.30771708  0.03145187  0.07369719]\n",
-      "[ 0.36207604  0.4024236   0.3636108   0.36070073 -0.35991025 -0.07537408\n",
-      " -0.09951471 -0.08413056  0.25953454  0.30643553 -0.1562667  -0.16326775]\n"
+      "[ 0.09659852  0.09275349  0.18248593 -0.21848202 -0.05988892  0.05594227\n",
+      "  0.20686662  0.19135175 -0.20834809 -0.06192682  0.03009366  0.09309844]\n",
+      "[ 0.05106411  0.09666862  0.22040284 -0.18563737 -0.06235941  0.06305607\n",
+      "  0.2060601   0.18239251 -0.20702831 -0.03909112 -0.00949711  0.11126692]\n"
      ]
     }
    ],
@@ -267,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "0.08625514042334204"
+       "36.67989681136702"
       ]
      },
      "execution_count": 12,
