--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -37,8 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.59965549  0.66000473  0.60195109  0.59759841 -0.48024437 -0.05465378\n",
-      " -0.09076175 -0.06775115  0.44628062  0.51643207 -0.17564767 -0.18611937]\n"
+      "[63.69758676 65.48891713 70.34915697 54.40002918 59.24234782 64.16862716\n",
+      " 69.78577881 68.85612404 53.55980009 60.15631858 61.31876181 66.06233364]\n"
      ]
     }
    ],
@@ -47,8 +47,8 @@
     "                  \"prune\" : 0.4,\n",
     "                  \"change\" : 0.1,\n",
     "                  \"swap\" : 0.1}\n",
-    "generator = DataGenerator(n_samples=1000, n_features=2, noise=0.1, random_seed=42)\n",
-    "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
+    "generator = DataGenerator(n_samples=3000, n_features=40, noise=0.1, random_seed=42)\n",
+    "X, y = generator.generate(scenario=\"linear\")\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "np.set_printoptions(suppress=True)\n",
     "print(y_train[:12])"
@@ -63,14 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations:   0%|          | 0/300 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iterations: 100%|██████████| 300/300 [00:05<00:00, 50.68it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:18<00:00, 16.05it/s]\n"
      ]
     }
    ],
@@ -129,14 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations:   0%|          | 0/500 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iterations: 100%|██████████| 500/500 [00:10<00:00, 45.77it/s]\n"
+      "Iterations: 100%|██████████| 1100/1100 [00:19<00:00, 57.51it/s]\n"
      ]
     },
     {
@@ -149,7 +135,7 @@
     }
    ],
    "source": [
-    "bart2 = DefaultBART(ndpost=400, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
+    "bart2 = DefaultBART(ndpost=1000, nskip=100, n_trees=50, proposal_probs=proposal_probs)\n",
     "%prun -s cumtime -D profile_bart.prof -q bart2.fit(X_train, y_train)\n",
     "!gprof2dot -f pstats profile_bart.prof -o profile_bart.dot\n",
     "!dot -Tpng profile_bart.dot -o profile_bart.png"
@@ -164,10 +150,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 3 1 3 2 2 3 1 1 2 0 1 2 2 3 2 1 1 2 2 0 3 4 2 2 2 1 1 1 2 2 1 1 0 1 1 1\n",
-      " 2 0 1 1 3 1 2 1 2 1 2 3 5 3 1 1 1 1 1 2 1 2 1 3 1 2 1 0 1 2 1 1 0 0 1 2 2\n",
-      " 1 0 2 2 1 1 1 1 2 1 1 1 5 1 2 1 0 1 0 1 1 2 2 2 2 1]\n",
-      "(array([ 1,  3,  6, 14, 21, 22, 41, 48, 49, 50, 60, 86]),)\n"
+      "[2 4 2 2 3 3 3 3 2 4 3 4 3 3 4 1 1 2 2 1 4 2 2 2 2 5 3 2 4 2 2 2 3 5 3 1 4\n",
+      " 2 2 3 2 1 2 1 2 4 3 2 2 1 5 4 2 2 1 3 3 2 1 4 2 1 2 2 2 3 2 4 3 1 2 2 3 1\n",
+      " 1 1 2 2 1 2 2 2 2 3 2 2 2 1 2 2 2 2 3 2 2 3 2 1 4 2]\n",
+      "(array([ 1,  4,  5,  6,  7,  9, 10, 11, 12, 13, 14, 20, 25, 26, 28, 32, 33,\n",
+      "       34, 36, 39, 45, 46, 50, 51, 55, 56, 59, 65, 67, 68, 72, 83, 92, 95,\n",
+      "       98]),)\n"
      ]
     }
    ],
@@ -208,7 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00642036])}\n"
+      "{'eps_sigma2': array([0.00081172])}\n"
      ]
     }
    ],
@@ -225,16 +213,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.763697386 (split, n = 750)\n",
-      "\tX_1 <= 0.514178932 (split, n = 562)\n",
-      "\t\tVal: -0.000567809 (leaf, n = 294)\n",
-      "\t\tVal: 0.024965059 (leaf, n = 268)\n",
-      "\tX_1 <= 0.092173070 (split, n = 188)\n",
-      "\t\tVal: 0.014175317 (leaf, n = 8)\n",
-      "\t\tVal: -0.013555662 (leaf, n = 180)\n",
-      "[ 0  1  1 -1 -1 -1 -1 -2]\n",
-      "[        nan         nan         nan -0.00056781  0.02496506  0.01417532\n",
-      " -0.01355566         nan]\n"
+      "X_19 <= 0.842776597 (split, n = 2250)\n",
+      "\tX_25 <= 0.639114857 (split, n = 1912)\n",
+      "\t\tVal: -0.012581126 (leaf, n = 1239)\n",
+      "\t\tVal: -0.000585763 (leaf, n = 673)\n",
+      "\tVal: 0.007525850 (leaf, n = 338)\n",
+      "[19 25 -1 -1 -1 -2 -2 -2]\n",
+      "[        nan         nan  0.00752585 -0.01258113 -0.00058576         nan\n",
+      "         nan         nan]\n"
      ]
     }
    ],
@@ -256,7 +242,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-09-09 20:41:24,802:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-06-23 17:59:16,168:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -264,9 +250,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.57 P_prune=0.43 A_grow=0.28 A_prune=0.40 (burnin)\n",
-      "Iteration 200/300 P_grow=0.54 P_prune=0.46 A_grow=0.30 A_prune=0.24\n",
-      "Iteration 300/300 P_grow=0.52 P_prune=0.48 A_grow=0.25 A_prune=0.31\n"
+      "Iteration 100/300 P_grow=0.53 P_prune=0.47 A_grow=0.13 A_prune=0.15 (burnin)\n",
+      "Iteration 200/300 P_grow=0.50 P_prune=0.50 A_grow=0.10 A_prune=0.06\n",
+      "Iteration 300/300 P_grow=0.50 P_prune=0.50 A_grow=0.10 A_prune=0.12\n"
      ]
     }
    ],
@@ -289,10 +275,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.016913205213783065,\n",
-       " 'rf': 0.01570244066836391,\n",
-       " 'lr': 0.04058944845865094,\n",
-       " 'btz': 0.01451765109911874}"
+       "{'bart': 2.017674140026814,\n",
+       " 'rf': 17.62572932546826,\n",
+       " 'lr': 0.010385157940898898,\n",
+       " 'btz': 2.043393861149057}"
       ]
      },
      "execution_count": 12,
@@ -323,10 +309,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.31316486  0.28736398  0.31458274  0.30757785 -0.39123347  0.07929082\n",
-      " -0.02212593  0.07817362  0.2402342   0.34557924 -0.09955953  0.03123178]\n",
-      "[ 0.36207604  0.4024236   0.3636108   0.36070073 -0.35991025 -0.07537408\n",
-      " -0.09951471 -0.08413056  0.25953454  0.30643553 -0.1562667  -0.16326775]\n"
+      "[ 0.09659852  0.09275349  0.18248593 -0.21848202 -0.05988892  0.05594227\n",
+      "  0.20686662  0.19135175 -0.20834809 -0.06192682  0.03009366  0.09309844]\n",
+      "[ 0.05106411  0.09666862  0.22040284 -0.18563737 -0.06235941  0.06305607\n",
+      "  0.2060601   0.18239251 -0.20702831 -0.03909112 -0.00949711  0.11126692]\n"
      ]
     }
    ],
@@ -343,7 +329,7 @@
     {
      "data": {
       "text/plain": [
-       "0.08625514042334204"
+       "36.67989681136702"
       ]
      },
      "execution_count": 14,
