Add support for 'separate' encoding and add other neural paper agents

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
     "                  \"prune\" : 0.4,\n",
     "                  \"change\" : 0.1,\n",
     "                  \"swap\" : 0.1}\n",
-    "generator = DataGenerator(n_samples=3000, n_features=40, noise=0.1, random_seed=42)\n",
+    "generator = DataGenerator(n_samples=5000, n_features=40, noise=0.1, random_seed=42)\n",
     "X, y = generator.generate(scenario=\"linear\")\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "np.set_printoptions(suppress=True)\n",
@@ -63,7 +63,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:18<00:00, 16.05it/s]\n"
+      "Iterations:   0%|          | 0/300 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iterations: 100%|██████████| 300/300 [00:13<00:00, 23.07it/s]\n"
      ]
     }
    ],
@@ -122,7 +129,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 1100/1100 [00:19<00:00, 57.51it/s]\n"
+      "Iterations:   1%|          | 9/1100 [00:00<00:12, 89.45it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iterations: 100%|██████████| 1100/1100 [00:15<00:00, 71.42it/s]\n"
      ]
     },
     {
@@ -242,7 +256,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-23 17:59:16,168:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-06-23 18:27:51,274:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
