--- a/notebooks/01_debug_profile.ipynb
+++ b/notebooks/01_debug_profile.ipynb
@@ -62,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:08<00:00,  7.80it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:08<00:00,  8.71it/s]\n"
      ]
     }
    ],
@@ -80,104 +80,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:05<00:00, 11.74it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:05<00:00, 12.91it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  _     ._   __/__   _ _  _  _ _/_   Recorded: 14:16:57  Samples:  5857\n",
-      " /_//_/// /_\\ / //_// / //_'/ //     Duration: 5.968     CPU time: 5.891\n",
-      "/   _/                      v5.0.1\n",
-      "\n",
-      "Profile at C:\\Windows\\Temp\\ipykernel_23776\\2353391020.py:4\n",
-      "\n",
-      "5.970 <module>  C:\\Windows\\Temp\\ipykernel_23776\\2353391020.py:1\n",
-      "└─ 5.970 MultiBART.fit  bart_playground\\bart.py:27\n",
-      "   └─ 5.969 MultiSampler.run  bart_playground\\samplers.py:83\n",
-      "      └─ 5.908 MultiSampler.one_iter  bart_playground\\samplers.py:358\n",
-      "         ├─ 5.228 MultiChange.propose  bart_playground\\moves.py:33\n",
-      "         │  ├─ 2.326 MultiChange.try_propose  bart_playground\\moves.py:401\n",
-      "         │  │  ├─ 1.038 Tree.change_split  bart_playground\\params.py:391\n",
-      "         │  │  │  └─ 1.015 Tree.update_n  bart_playground\\params.py:405\n",
-      "         │  │  │     ├─ 0.472 [self]  bart_playground\\params.py\n",
-      "         │  │  │     ├─ 0.272 Tree.update_n  bart_playground\\params.py:405\n",
-      "         │  │  │     └─ 0.232 sum  numpy\\core\\fromnumeric.py:2177\n",
-      "         │  │  │           [2 frames hidden]  numpy, <built-in>\n",
-      "         │  │  ├─ 0.288 BARTLikelihood.trees_log_marginal_lkhd  bart_playground\\priors.py:279\n",
-      "         │  │  │  ├─ 0.141 _trees_log_marginal_lkhd_numba  bart_playground\\priors.py:27\n",
-      "         │  │  │  └─ 0.066 Parameters.leaf_basis  bart_playground\\params.py:675\n",
-      "         │  │  ├─ 0.239 [self]  bart_playground\\moves.py\n",
-      "         │  │  ├─ 0.137 Parameters.copy  bart_playground\\params.py:598\n",
-      "         │  │  │  └─ 0.107 Tree.copy  bart_playground\\params.py:157\n",
-      "         │  │  │     └─ 0.101 Tree.from_existing  bart_playground\\params.py:130\n",
-      "         │  │  │        └─ 0.067 _copy_all_tree_arrays  bart_playground\\params.py:43\n",
-      "         │  │  ├─ 0.117 <listcomp>  bart_playground\\moves.py:404\n",
-      "         │  │  ├─ 0.093 Tree.copy  bart_playground\\params.py:157\n",
-      "         │  │  │  └─ 0.087 Tree.from_existing  bart_playground\\params.py:130\n",
-      "         │  │  ├─ 0.090 <listcomp>  bart_playground\\moves.py:456\n",
-      "         │  │  ├─ 0.079 Generator.choice  <built-in>\n",
-      "         │  │  └─ 0.076 _mean  numpy\\core\\_methods.py:101\n",
-      "         │  ├─ 1.277 MultiPrune.try_propose  bart_playground\\moves.py:292\n",
-      "         │  │  ├─ 0.404 Tree.split_leaf  bart_playground\\params.py:269\n",
-      "         │  │  │  ├─ 0.226 CPUDispatcher._compile_for_args  numba\\core\\dispatcher.py:344\n",
-      "         │  │  │  │     [14 frames hidden]  numba\n",
-      "         │  │  │  └─ 0.144 Tree._resize_arrays  bart_playground\\params.py:206\n",
-      "         │  │  │     └─ 0.079 full  numpy\\core\\numeric.py:274\n",
-      "         │  │  ├─ 0.162 [self]  bart_playground\\moves.py\n",
-      "         │  │  ├─ 0.152 BARTLikelihood.trees_log_marginal_lkhd  bart_playground\\priors.py:279\n",
-      "         │  │  │  └─ 0.077 _trees_log_marginal_lkhd_numba  bart_playground\\priors.py:27\n",
-      "         │  │  ├─ 0.105 Parameters.copy  bart_playground\\params.py:598\n",
-      "         │  │  │  └─ 0.078 Tree.copy  bart_playground\\params.py:157\n",
-      "         │  │  │     └─ 0.074 Tree.from_existing  bart_playground\\params.py:130\n",
-      "         │  │  ├─ 0.081 <listcomp>  bart_playground\\moves.py:335\n",
-      "         │  │  └─ 0.071 Tree.prune_split  bart_playground\\params.py:327\n",
-      "         │  ├─ 1.124 MultiGrow.try_propose  bart_playground\\moves.py:180\n",
-      "         │  │  ├─ 0.178 [self]  bart_playground\\moves.py\n",
-      "         │  │  ├─ 0.177 BARTLikelihood.trees_log_marginal_lkhd  bart_playground\\priors.py:279\n",
-      "         │  │  │  └─ 0.092 _trees_log_marginal_lkhd_numba  bart_playground\\priors.py:27\n",
-      "         │  │  ├─ 0.163 Tree.split_leaf  bart_playground\\params.py:269\n",
-      "         │  │  │  └─ 0.102 Tree._resize_arrays  bart_playground\\params.py:206\n",
-      "         │  │  ├─ 0.122 <listcomp>  bart_playground\\moves.py:183\n",
-      "         │  │  ├─ 0.069 Generator.choice  <built-in>\n",
-      "         │  │  └─ 0.061 Parameters.copy  bart_playground\\params.py:598\n",
-      "         │  ├─ 0.192 MultiSwap.try_propose  bart_playground\\moves.py:513\n",
-      "         │  │  └─ 0.107 Tree.swap_split  bart_playground\\params.py:398\n",
-      "         │  │     └─ 0.104 Tree.change_split  bart_playground\\params.py:391\n",
-      "         │  │        └─ 0.102 Tree.update_n  bart_playground\\params.py:405\n",
-      "         │  ├─ 0.137 Parameters.copy  bart_playground\\params.py:598\n",
-      "         │  │  └─ 0.096 Tree.copy  bart_playground\\params.py:157\n",
-      "         │  │     └─ 0.089 Tree.from_existing  bart_playground\\params.py:130\n",
-      "         │  └─ 0.128 [self]  bart_playground\\moves.py\n",
-      "         ├─ 0.231 Parameters.update_leaf_vals  bart_playground\\params.py:689\n",
-      "         │  ├─ 0.077 [self]  bart_playground\\params.py\n",
-      "         │  ├─ 0.076 Tree.update_outputs  bart_playground\\params.py:440\n",
-      "         │  └─ 0.061 Tree.n_leaves  bart_playground\\params.py:464\n",
-      "         ├─ 0.137 TreesPrior.resample_leaf_vals  bart_playground\\priors.py:100\n",
-      "         │  └─ 0.062 _resample_leaf_vals_numba  bart_playground\\priors.py:13\n",
-      "         ├─ 0.110 [self]  bart_playground\\samplers.py\n",
-      "         └─ 0.088 Parameters.copy  bart_playground\\params.py:598\n",
-      "            └─ 0.083 Tree.copy  bart_playground\\params.py:157\n",
-      "               └─ 0.081 Tree.from_existing  bart_playground\\params.py:130\n",
-      "                  └─ 0.061 _copy_all_tree_arrays  bart_playground\\params.py:43\n",
-      "\n",
+      " \n",
+      "*** Profile stats marshalled to file 'profile_multi.prof'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n"
      ]
     }
    ],
    "source": [
-    "from pyinstrument import Profiler\n",
-    "\n",
-    "profiler = Profiler()\n",
-    "profiler.start()\n",
-    "\n",
     "bart = MultiBART(ndpost=50, nskip=20, n_trees=100, proposal_probs=proposal_probs, multi_tries=1)\n",
-    "bart.fit(X_train, y_train)\n",
-    "\n",
-    "profiler.stop()\n",
-    "profiler.print()"
+    "%prun -s cumtime -D profile_multi.prof -q bart.fit(X_train, y_train)\n",
+    "!gprof2dot -f pstats profile_multi.prof -o profile_multi.dot\n",
+    "!dot -Tpng profile_multi.dot -o profile_multi.png"
    ]
   },
   {
@@ -189,9 +115,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-28 14:17:04,430:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:2025-06-28 22:44:35,541:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:2025-06-28 14:17:04,437:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-06-28 22:44:35,544:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     }
@@ -216,104 +142,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:03<00:00, 23.06it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  _     ._   __/__   _ _  _  _ _/_   Recorded: 14:17:12  Samples:  3015\n",
-      " /_//_/// /_\\ / //_// / //_'/ //     Duration: 3.045     CPU time: 3.031\n",
-      "/   _/                      v5.0.1\n",
-      "\n",
-      "Profile at C:\\Windows\\Temp\\ipykernel_23776\\3672608610.py:2\n",
-      "\n",
-      "3.044 ZMQInteractiveShell.run_code  IPython\\core\\interactiveshell.py:3543\n",
-      "└─ 3.043 <module>  C:\\Windows\\Temp\\ipykernel_23776\\3672608610.py:1\n",
-      "   └─ 3.043 DefaultBART.fit  bart_playground\\bart.py:27\n",
-      "      └─ 3.042 DefaultSampler.run  bart_playground\\samplers.py:83\n",
-      "         └─ 3.004 DefaultSampler.one_iter  bart_playground\\samplers.py:280\n",
-      "            ├─ 1.988 Swap.propose  bart_playground\\moves.py:33\n",
-      "            │  ├─ 1.014 Swap.try_propose  bart_playground\\moves.py:146\n",
-      "            │  │  ├─ 0.861 Tree.swap_split  bart_playground\\params.py:398\n",
-      "            │  │  │  └─ 0.843 Tree.change_split  bart_playground\\params.py:391\n",
-      "            │  │  │     └─ 0.831 Tree.update_n  bart_playground\\params.py:405\n",
-      "            │  │  │        ├─ 0.417 Tree.update_n  bart_playground\\params.py:405\n",
-      "            │  │  │        │  ├─ 0.249 [self]  bart_playground\\params.py\n",
-      "            │  │  │        │  ├─ 0.099 sum  numpy\\core\\fromnumeric.py:2177\n",
-      "            │  │  │        │  │     [2 frames hidden]  numpy, <built-in>\n",
-      "            │  │  │        │  └─ 0.050 Tree.update_n  bart_playground\\params.py:405\n",
-      "            │  │  │        ├─ 0.287 [self]  bart_playground\\params.py\n",
-      "            │  │  │        └─ 0.106 sum  numpy\\core\\fromnumeric.py:2177\n",
-      "            │  │  │              [2 frames hidden]  numpy, <built-in>\n",
-      "            │  │  ├─ 0.086 Tree.nonterminal_split_nodes  bart_playground\\params.py:476\n",
-      "            │  │  │  └─ 0.075 <listcomp>  bart_playground\\params.py:478\n",
-      "            │  │  └─ 0.035 Generator.integers  <built-in>\n",
-      "            │  ├─ 0.319 Parameters.copy  bart_playground\\params.py:598\n",
-      "            │  │  ├─ 0.256 Tree.copy  bart_playground\\params.py:157\n",
-      "            │  │  │  └─ 0.241 Tree.from_existing  bart_playground\\params.py:130\n",
-      "            │  │  │     ├─ 0.153 _copy_all_tree_arrays  bart_playground\\params.py:43\n",
-      "            │  │  │     │  ├─ 0.118 [self]  bart_playground\\params.py\n",
-      "            │  │  │     │  └─ 0.035 _numba_unpickle  numba\\core\\serialize.py:30\n",
-      "            │  │  │     └─ 0.074 [self]  bart_playground\\params.py\n",
-      "            │  │  └─ 0.033 [self]  bart_playground\\params.py\n",
-      "            │  ├─ 0.287 Change.try_propose  bart_playground\\moves.py:124\n",
-      "            │  │  └─ 0.216 Tree.change_split  bart_playground\\params.py:391\n",
-      "            │  │     └─ 0.210 Tree.update_n  bart_playground\\params.py:405\n",
-      "            │  │        ├─ 0.089 [self]  bart_playground\\params.py\n",
-      "            │  │        ├─ 0.062 Tree.update_n  bart_playground\\params.py:405\n",
-      "            │  │        └─ 0.048 sum  numpy\\core\\fromnumeric.py:2177\n",
-      "            │  │           └─ 0.039 _wrapreduction  numpy\\core\\fromnumeric.py:71\n",
-      "            │  ├─ 0.205 Grow.try_propose  bart_playground\\moves.py:76\n",
-      "            │  │  ├─ 0.082 Tree.split_leaf  bart_playground\\params.py:269\n",
-      "            │  │  │  └─ 0.047 Tree._resize_arrays  bart_playground\\params.py:206\n",
-      "            │  │  ├─ 0.031 fast_choice  bart_playground\\util.py:9\n",
-      "            │  │  └─ 0.031 Tree.terminal_split_nodes  bart_playground\\params.py:472\n",
-      "            │  └─ 0.098 Prune.try_propose  bart_playground\\moves.py:100\n",
-      "            │     └─ 0.052 Tree.prune_split  bart_playground\\params.py:327\n",
-      "            │        └─ 0.031 Tree._truncate_tree_arrays  bart_playground\\params.py:249\n",
-      "            ├─ 0.469 DefaultSampler.log_mh_ratio  bart_playground\\samplers.py:273\n",
-      "            │  ├─ 0.362 BARTLikelihood.trees_log_marginal_lkhd_ratio  bart_playground\\priors.py:320\n",
-      "            │  │  └─ 0.344 BARTLikelihood.trees_log_marginal_lkhd  bart_playground\\priors.py:279\n",
-      "            │  │     ├─ 0.189 _trees_log_marginal_lkhd_numba  bart_playground\\priors.py:27\n",
-      "            │  │     ├─ 0.067 Parameters.leaf_basis  bart_playground\\params.py:675\n",
-      "            │  │     │  └─ 0.061 Tree.leaf_basis  bart_playground\\params.py:481\n",
-      "            │  │     │     └─ 0.043 _compute_leaf_basis  bart_playground\\params.py:7\n",
-      "            │  │     ├─ 0.050 [self]  bart_playground\\priors.py\n",
-      "            │  │     └─ 0.038 Parameters.evaluate  bart_playground\\params.py:637\n",
-      "            │  ├─ 0.056 TreesPrior.trees_log_prior_ratio  bart_playground\\priors.py:155\n",
-      "            │  │  └─ 0.051 TreesPrior.trees_log_prior  bart_playground\\priors.py:132\n",
-      "            │  └─ 0.051 [self]  bart_playground\\samplers.py\n",
-      "            ├─ 0.179 Parameters.update_leaf_vals  bart_playground\\params.py:689\n",
-      "            │  ├─ 0.064 [self]  bart_playground\\params.py\n",
-      "            │  ├─ 0.063 Tree.update_outputs  bart_playground\\params.py:440\n",
-      "            │  └─ 0.035 Tree.n_leaves  bart_playground\\params.py:464\n",
-      "            ├─ 0.088 TreesPrior.resample_leaf_vals  bart_playground\\priors.py:100\n",
-      "            │  └─ 0.037 _resample_leaf_vals_numba  bart_playground\\priors.py:13\n",
-      "            ├─ 0.087 Parameters.copy  bart_playground\\params.py:598\n",
-      "            │  └─ 0.085 Tree.copy  bart_playground\\params.py:157\n",
-      "            │     └─ 0.084 Tree.from_existing  bart_playground\\params.py:130\n",
-      "            │        ├─ 0.049 _copy_all_tree_arrays  bart_playground\\params.py:43\n",
-      "            │        └─ 0.035 [self]  bart_playground\\params.py\n",
-      "            ├─ 0.085 [self]  bart_playground\\samplers.py\n",
-      "            └─ 0.031 Generator.uniform  <built-in>\n",
-      "\n",
-      "\n"
+      "Iterations: 100%|██████████| 70/70 [00:02<00:00, 33.63it/s]\n"
      ]
     }
    ],
    "source": [
-    "profiler = Profiler()\n",
-    "profiler.start()\n",
+    "# profiler = Profiler()\n",
+    "# profiler.start()\n",
     "\n",
     "default_proposal_probs = {\"grow\": 0.25, \"prune\": 0.25, \"change\": 0.4, \"swap\": 0.1}\n",
     "bart_default = DefaultBART(ndpost=50, nskip=20, n_trees=100, proposal_probs=default_proposal_probs)\n",
     "bart_default.fit(X_train, y_train)\n",
     "\n",
-    "profiler.stop()\n",
-    "profiler.print()"
+    "# profiler.stop()\n",
+    "# profiler.print()"
    ]
   },
   {
