--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:09<00:00, 33.00it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:11<00:00, 26.10it/s]\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:09<00:00, 53.27it/s]\n"
+      "Iterations: 100%|██████████| 500/500 [00:11<00:00, 43.89it/s]"
      ]
     },
     {
@@ -91,6 +91,13 @@
      "text": [
       " \n",
       "*** Profile stats marshalled to file 'profile_bart.prof'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -110,10 +117,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 4 3 2 2 1 1 2 1 1 3 2 1 1 5 5 2 1 2 0 1 1 2 1 2 2 2 1 2 1 2 1 0 1 0\n",
-      " 1 1 1 1 1 1 1 1 2 2 1 2 1 2 1 2 2 2 1 2 1 1 2 1 1 1 1 1 1 1 2 1 1 2 2 4 2\n",
-      " 1 1 3 1 1 1 1 2 5 1 1 1 2 2 1 2 2 1 1 1 1 2 1 1 0 1]\n",
-      "(array([ 3,  4, 12, 16, 17, 72, 76, 82]),)\n"
+      "[1 3 1 3 2 2 3 1 1 2 0 1 2 2 3 2 1 1 2 2 0 3 4 2 2 2 1 1 1 2 2 1 1 0 1 1 1\n",
+      " 2 0 1 1 3 1 2 1 2 1 2 3 5 3 1 1 1 1 1 2 1 2 1 3 1 2 1 0 1 2 1 1 0 0 1 2 2\n",
+      " 1 0 2 2 1 1 1 1 2 1 1 1 5 1 2 1 0 1 0 1 1 2 2 2 2 1]\n",
+      "(array([ 1,  3,  6, 14, 21, 22, 41, 48, 49, 50, 60, 86], dtype=int64),)\n"
      ]
     }
    ],
@@ -134,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00661782])}\n"
+      "{'eps_sigma2': array([0.00642037])}\n"
      ]
     }
    ],
@@ -151,14 +158,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.650110245 (split, n = 750)\n",
-      "\tVal: 0.004659622 (leaf, n = 480)\n",
-      "\tX_1 <= 0.315988928 (split, n = 270)\n",
-      "\t\tVal: -0.005203606 (leaf, n = 74)\n",
-      "\t\tVal: -0.028871579 (leaf, n = 196)\n",
-      "[ 0 -1  1 -2 -2 -1 -1 -2]\n",
-      "[        nan  0.00465962         nan         nan         nan -0.00520361\n",
-      " -0.02887158         nan]\n"
+      "Val: 0.020323683 (leaf, n = 750)\n",
+      "[-1 -2 -2 -2 -2 -2 -2 -2]\n",
+      "[0.02032368        nan        nan        nan        nan        nan\n",
+      "        nan        nan]\n"
      ]
     }
    ],
@@ -180,17 +183,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-23 12:00:55,884:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-      "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
+      "INFO:2025-06-29 19:53:08,289:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:2025-06-29 19:53:08,291:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.57 P_prune=0.43 A_grow=0.28 A_prune=0.40 (burnin)\n",
-      "Iteration 200/300 P_grow=0.54 P_prune=0.46 A_grow=0.30 A_prune=0.24\n",
-      "Iteration 300/300 P_grow=0.52 P_prune=0.48 A_grow=0.25 A_prune=0.31\n"
+      "Iteration 100/300 P_grow=0.57 P_prune=0.43 A_grow=0.23 A_prune=0.26 (burnin)\n",
+      "Iteration 200/300 P_grow=0.55 P_prune=0.45 A_grow=0.25 A_prune=0.40\n",
+      "Iteration 300/300 P_grow=0.58 P_prune=0.42 A_grow=0.31 A_prune=0.29\n"
      ]
     }
    ],
@@ -213,10 +218,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.01699852984056321,\n",
+       "{'bart': 0.016913212704946837,\n",
        " 'rf': 0.01570244066836391,\n",
        " 'lr': 0.04058944845865094,\n",
-       " 'btz': 0.01451765109911874}"
+       " 'btz': 0.0161684617715213}"
       ]
      },
      "execution_count": 10,
@@ -247,8 +252,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.24605564  0.27110088  0.28510376  0.26839188 -0.33688342  0.09359006\n",
-      "  0.0220605   0.02451161  0.23247432  0.30771708  0.03145187  0.07369719]\n",
+      "[ 0.31316474  0.28736308  0.31458262  0.30757681 -0.39123336  0.07929095\n",
+      " -0.02212575  0.07817346  0.24023395  0.34557937 -0.09955954  0.03123212]\n",
       "[ 0.36207604  0.4024236   0.3636108   0.36070073 -0.35991025 -0.07537408\n",
       " -0.09951471 -0.08413056  0.25953454  0.30643553 -0.1562667  -0.16326775]\n"
      ]
@@ -323,7 +328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bartpg",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -337,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
