Adapt to the changes in speed_optimization branch. Fix some typos.

--- a/notebooks/01_debug_profile.ipynb
+++ b/notebooks/01_debug_profile.ipynb
@@ -62,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:08<00:00,  8.71it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:07<00:00,  8.88it/s]\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:05<00:00, 12.91it/s]"
+      "Iterations: 100%|██████████| 70/70 [00:03<00:00, 19.81it/s]\n"
      ]
     },
     {
@@ -89,13 +89,6 @@
      "text": [
       " \n",
       "*** Profile stats marshalled to file 'profile_multi.prof'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -115,9 +108,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-28 22:44:35,541:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:2025-06-30 02:42:03,613:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:2025-06-28 22:44:35,544:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-06-30 02:42:03,618:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     }
@@ -142,20 +135,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:02<00:00, 33.63it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 55.20it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "*** Profile stats marshalled to file 'profile_bart.prof'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "# profiler = Profiler()\n",
-    "# profiler.start()\n",
-    "\n",
     "default_proposal_probs = {\"grow\": 0.25, \"prune\": 0.25, \"change\": 0.4, \"swap\": 0.1}\n",
     "bart_default = DefaultBART(ndpost=50, nskip=20, n_trees=100, proposal_probs=default_proposal_probs)\n",
-    "bart_default.fit(X_train, y_train)\n",
-    "\n",
-    "# profiler.stop()\n",
-    "# profiler.print()"
+    "%prun -s cumtime -D profile_bart.prof -q bart_default.fit(X_train, y_train)\n",
+    "!gprof2dot -f pstats profile_bart.prof -o profile_bart.dot\n",
+    "!dot -Tpng profile_bart.dot -o profile_bart.png"
    ]
   },
   {
@@ -166,11 +170,11 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.02112037030574617,\n",
+       "{'bart': 0.022393055665879884,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.022409798535525886,\n",
-       " 'bart_default': 0.02292141162635982}"
+       " 'bart_default': 0.023832538602088074}"
       ]
      },
      "execution_count": 8,
