Add fallback to SVD when updating more than 1 tree at a time
By the way, slightly DRY the changes in `moves.py`

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:11<00:00, 26.10it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:08<00:00, 33.62it/s]\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:11<00:00, 43.89it/s]"
+      "Iterations: 100%|██████████| 500/500 [00:08<00:00, 60.49it/s]\n"
      ]
     },
     {
@@ -91,13 +91,6 @@
      "text": [
       " \n",
       "*** Profile stats marshalled to file 'profile_bart.prof'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -120,7 +113,7 @@
       "[1 3 1 3 2 2 3 1 1 2 0 1 2 2 3 2 1 1 2 2 0 3 4 2 2 2 1 1 1 2 2 1 1 0 1 1 1\n",
       " 2 0 1 1 3 1 2 1 2 1 2 3 5 3 1 1 1 1 1 2 1 2 1 3 1 2 1 0 1 2 1 1 0 0 1 2 2\n",
       " 1 0 2 2 1 1 1 1 2 1 1 1 5 1 2 1 0 1 0 1 1 2 2 2 2 1]\n",
-      "(array([ 1,  3,  6, 14, 21, 22, 41, 48, 49, 50, 60, 86], dtype=int64),)\n"
+      "(array([ 1,  3,  6, 14, 21, 22, 41, 48, 49, 50, 60, 86]),)\n"
      ]
     }
    ],
@@ -158,9 +151,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Val: 0.020323683 (leaf, n = 750)\n",
+      "Val: 0.020323725 (leaf, n = 750)\n",
       "[-1 -2 -2 -2 -2 -2 -2 -2]\n",
-      "[0.02032368        nan        nan        nan        nan        nan\n",
+      "[0.02032373        nan        nan        nan        nan        nan\n",
       "        nan        nan]\n"
      ]
     }
@@ -183,19 +176,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-29 19:53:08,289:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:2025-06-29 19:53:08,291:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
-      "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
+      "INFO:2025-06-30 12:43:39,796:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.57 P_prune=0.43 A_grow=0.23 A_prune=0.26 (burnin)\n",
-      "Iteration 200/300 P_grow=0.55 P_prune=0.45 A_grow=0.25 A_prune=0.40\n",
-      "Iteration 300/300 P_grow=0.58 P_prune=0.42 A_grow=0.31 A_prune=0.29\n"
+      "Iteration 100/300 P_grow=0.57 P_prune=0.43 A_grow=0.28 A_prune=0.40 (burnin)\n",
+      "Iteration 200/300 P_grow=0.54 P_prune=0.46 A_grow=0.30 A_prune=0.24\n",
+      "Iteration 300/300 P_grow=0.52 P_prune=0.48 A_grow=0.25 A_prune=0.31\n"
      ]
     }
    ],
@@ -218,10 +209,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.016913212704946837,\n",
+       "{'bart': 0.01691320506143667,\n",
        " 'rf': 0.01570244066836391,\n",
        " 'lr': 0.04058944845865094,\n",
-       " 'btz': 0.0161684617715213}"
+       " 'btz': 0.01451765109911874}"
       ]
      },
      "execution_count": 10,
@@ -252,8 +243,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.31316474  0.28736308  0.31458262  0.30757681 -0.39123336  0.07929095\n",
-      " -0.02212575  0.07817346  0.24023395  0.34557937 -0.09955954  0.03123212]\n",
+      "[ 0.31316488  0.28736396  0.31458223  0.30757761 -0.39123301  0.07929112\n",
+      " -0.02212582  0.07817353  0.24023445  0.34557913 -0.09955961  0.03123185]\n",
       "[ 0.36207604  0.4024236   0.3636108   0.36070073 -0.35991025 -0.07537408\n",
       " -0.09951471 -0.08413056  0.25953454  0.30643553 -0.1562667  -0.16326775]\n"
      ]
@@ -328,7 +319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bartpg",
    "language": "python",
    "name": "python3"
   },
@@ -342,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
